init extension files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "jade": "*"
     },
     "engines": {
         "node": "0.8.x",
@@ -12,7 +11,7 @@
     },
     "devDependencies": {
         "grunt": "0.4.x",
-        "grunt-contrib-jshint": "0.3.x",
-        "grunt-contrib-handlebars": "0.5.x"
+        "grunt-contrib-handlebars": "0.5.x",
+        "grunt-contrib-watch": "0.3.x"
     }
 }
