--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,13 +8,18 @@
   "permissions": [
     "alarms",
     "storage",
+    "notifications",
     "http://*/",
     "https://*/"
   ],
   "options_page": "options.html",
   "background": {
     "page": "background.html"
-  },"browser_action": {
+  },
+  "browser_action": {
     "default_popup": "popup.html"
-  }
+  },
+  "web_accessible_resources": [
+    "img/notify.png"
+  ]
 }
