add icons, modify README, license to prepare release

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,17 @@
 {
+  "name": "Jenkins Chrome",
+  "version": "0.1",
   "manifest_version": 2,
 
-  "name": "Jenkins Chrome",
   "description": "Chrome Extensions for Jenkins.",
-  "version": "1.0",
+  "homepage_url": "https://github.com/justlaputa/jenkins-chrome",
+  "minimum_chrome_version": "22",
+
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
 
   "permissions": [
     "alarms",
@@ -12,13 +20,18 @@
     "http://*/",
     "https://*/"
   ],
+
   "options_page": "options.html",
+
   "background": {
     "page": "background.html"
   },
+
   "browser_action": {
+    "default_icon": "icon16.png",
     "default_popup": "popup.html"
   },
+
   "web_accessible_resources": [
     "img/notify.png"
   ]
