--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-    "name": "chrome-jenkins",
-    "description": "google-chrome extension of Jenkins",
-    "version": "0.0.1",
-    "private": true,
-    "dependencies": {
-    },
-    "engines": {
-        "node": "0.8.x",
-        "npm": "1.2.x"
-    },
-    "devDependencies": {
-        "grunt": "0.4.x",
-        "grunt-contrib-handlebars": "0.5.x",
-        "grunt-contrib-watch": "0.3.x"
-    }
+  "name": "chrome-jenkins",
+  "description": "google-chrome extension of Jenkins",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {},
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.2.x"
+  },
+  "devDependencies": {
+    "grunt": "0.4.x",
+    "grunt-contrib-handlebars": "0.5.x",
+    "grunt-contrib-watch": "0.3.x",
+    "grunt-contrib-copy": "~0.4.1"
+  }
 }
