add babel and webpack
only use babel to transpile es6 modules, webpack to bundle js

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
 node_modules/
-bower_components/
-
-extension/js/lib/
-extension/js/template.js
-extension/font/
-extension/css/bootstrap*
-extension/css/font-awesome*
-extension/img/glyphicons*
+extension/
+extension_build/
