add react into popup page

--- a/extension_src/manifest.json
+++ b/extension_src/manifest.json
@@ -21,9 +21,13 @@
     "https://*/"
   ],
 
+  "browser_action": {
+    "default_icon": "icons/icon16.png",
+    "default_popup": "popup.html"
+  },
+
   "background": {
     "scripts": ["background.bundle.js"],
     "persistent": false
-
   }
 }
