add options page
also added bootstrap in package.json, though not used yet, it will be
used later in popup page

--- a/extension_src/manifest.json
+++ b/extension_src/manifest.json
@@ -26,6 +26,11 @@
     "default_popup": "popup.html"
   },
 
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
+  },
+
   "background": {
     "scripts": ["background.bundle.js"],
     "persistent": false
